<resources>
    <string name="app_name">chat application</string>
    <string name="group_image">group image</string>
    <string name="write_here">write here</string>
    <string name="send_image">send image</string>
    <string name="upload_image">upload image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="log_out">log out</string>
    <string name="profile_image">profile image</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="create">Create</string>
    <string name="create_a_new_group">Create A New Group</string>
    <string name="groups">Groups</string>
    <string name="above99">99+</string>
    <string name="see_new_messages">See New Messages</string>
</resources>
